#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-13-19
2016-1-12 David Schneider
- switch to safe access to list of object data members in pds2psana backend,
  JIRA PSAS-208
	
Tag: V00-13-18
2015-5-28 David
- When running the ddl compiler and the -d switch to include devel types has
  not been given, skip a type in the config list if it is a DEVEL type.
  update to JIRA Issue PSAS-42

Tag: V00-13-17
2015-2-4 David Schneider
- update ddl wrapper common code. No need to update DAQ. JIRA issue PSAS-103
- fix this changelog, somehow tags are out of sync
	
Tag: V00-13-14
2015-2-03 David Schneider
- add Python library to use for analysis release wrapper scripts.
  No change to compiler or need for DAQ to update package.
- See JIRA issue PSAS-103

Tag: V00-13-13
2014-10-09 David
- add [[DEVEL]] tag for type definitions. psddlc will skip parseing of these
  types by default. Users can give psddlc the -D option to force code generation
  of the [[DEVEL]] types. See JIRA Issue PSAS-42

Tag: V00-13-12
2014-06-14 David
- Translator backend: move default_psana.cfg into data subdir.
- python backend: check for mix of versioned and unversioned types,
  do not generate unversioned list of versioned types in there is a mix.
  trac ticket: https://pswww.slac.stanford.edu/trac/psdm/ticket/309#comment:2

Tag: V00-13-11
2014-05-13 David
- Adjust backend for psana_test package.

Tag: V00-13-10
2014-05-09 David
- Add backend for psana_test package.

Tag: V00-13-09
2014-03-25 David
- Documenting error with check in of Tag V00-13-13 from Jan 2013. That
- tag name is an error. It was supposed to be tag V00-13-03.

Tag: V00-13-08
2014-03-25 David